@@ -1,7 +1,7 @@
 package mate.academy.controller;
 
-import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import javax.validation.Valid;
 import mate.academy.exception.AuthenticationException;
 import mate.academy.model.User;
@@ -36,10 +36,9 @@ public class AuthenticationController {
             throws AuthenticationException {
         User user = authenticationService.login(userLoginDto.getLogin(),
                 userLoginDto.getPassword());
-        List<String> roles = user.getRoles().stream()
+        String token = jwtTokenProvider.createToken(user.getEmail(), user.getRoles().stream()
                 .map(role -> role.getRoleName().name())
-                .toList();
-        String token = jwtTokenProvider.createToken(user.getEmail(), roles);
+                .collect(Collectors.toList()));
         return new ResponseEntity<>(Map.of("token", token), HttpStatus.OK);
     }
 }
